--- a/Demo-LendingTracker/Views/Home/Index.cshtml
+++ b/Demo-LendingTracker/Views/Home/Index.cshtml
@@ -1,6 +1,3 @@
-﻿<script src="~/Scripts/jquery-2.1.1.js"></script>
-<script src="~/Scripts/knockout-3.2.0.js"></script>
-
-@section SPAViews {
+﻿@section SPAViews {
     @Html.Partial("_Home")
 }
